# st_app

./: .gitignore  AIDL_Assignment_CGAN_student.ipynb  home.py  pyproject.toml
pages/: 1_Plot_Sample.py
