[tool.poetry]
name = "st-app"
version = "0.1.0"
description = ""
authors = ["eertan <erolertan4@gmail.com>"]
readme = "README.md"
# packages = [{include = "st_app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.15.2"
dask = "^2022.12.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
